--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 	Ion by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Ion by TEMPLATED</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="description" content=""><meta name="keywords" content=""><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]--><script src="js/jquery.min.js"></script><script src="js/skel.min.js"></script><script src="js/skel-layers.min.js"></script><script src="js/init.js"></script><noscript>
+--><html><head><title>Foy Lab</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="description" content=""><meta name="keywords" content=""><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]--><script src="js/jquery.min.js"></script><script src="js/skel.min.js"></script><script src="js/skel-layers.min.js"></script><script src="js/init.js"></script><noscript>
 			<link rel="stylesheet" href="css/skel.css"><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/style-xlarge.css"></noscript></head><body id="top">
 
 		<!-- Header -->
-			<header id="header" class="skel-layers-fixed"><h1><a href="#">Ion</a></h1>
+			<header id="header" class="skel-layers-fixed"><h1><a href="#">FOY</a></h1>
 				<nav id="nav"><ul><li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="left-sidebar.html">Research</a></li>
+						<li><a href="right-sidebar.html">Publications</a></li>
+						<li><a href="no-sidebar.html">Tools</a></li>
+						<li><a href="no-sidebar.html">Join</a></li>
 					</ul></nav></header><!-- Banner --><section id="banner"><div class="inner">
-					<h2>This is Ion</h2>
+					<h2>Foy Lab</h2>
 					<p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
 					<ul class="actions"><li><a href="#content" class="button big special">Sign Up</a></li>
 						<li><a href="#elements" class="button big alt">Learn More</a></li>
