--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<li><a href="no-sidebar.html">Join</a></li>
 					</ul></nav></header><!-- Banner --><section id="banner"><div class="inner">
 					<h2>Foy Lab</h2>
-					<p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
+					<p>Currently being built. Please check back later!</p>
 					<ul class="actions"><li><a href="#content" class="button big special">Sign Up</a></li>
 						<li><a href="#elements" class="button big alt">Learn More</a></li>
 					</ul></div>
