--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 			<link rel="stylesheet" href="css/skel.css"><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/style-xlarge.css"></noscript></head><body id="top">
 
 		<!-- Header -->
-			<header id="header" class="skel-layers-fixed"><h1><a href="#">FOY</a></h1>
-				<nav id="nav"><ul><li><a href="index.html">Home</a></li>
+			<header id="header" class="skel-layers-fixed"><h1><a href="#">FOY LAB</a></h1>
+				<nav id="nav"><ul><li><a href="index.html">People</a></li>
 						<li><a href="left-sidebar.html">Research</a></li>
 						<li><a href="right-sidebar.html">Publications</a></li>
 						<li><a href="no-sidebar.html">Tools</a></li>
@@ -16,64 +16,23 @@
 					</ul></nav></header><!-- Banner --><section id="banner"><div class="inner">
 					<h2>Foy Lab</h2>
 					<p>Currently being built. Please check back later!</p>
-					<ul class="actions"><li><a href="#content" class="button big special">Sign Up</a></li>
-						<li><a href="#elements" class="button big alt">Learn More</a></li>
-					</ul></div>
-			</section><!-- One --><section id="one" class="wrapper style1"><header class="major"><h2>Ipsum feugiat consequat</h2>
-					<p>Tempus adipiscing commodo ut aliquam blandit</p>
-				</header><div class="container">
-					<div class="row">
-						<div class="4u">
-							<section class="special box"><i class="icon fa-area-chart major"></i>
-								<h3>Justo placerat</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
-							</section></div>
-						<div class="4u">
-							<section class="special box"><i class="icon fa-refresh major"></i>
-								<h3>Blandit quis curae</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
-							</section></div>
-						<div class="4u">
-							<section class="special box"><i class="icon fa-cog major"></i>
-								<h3>Amet sed accumsan</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
-							</section></div>
-					</div>
-				</div>
-			</section><!-- Two --><section id="two" class="wrapper style2"><header class="major"><h2>Commodo accumsan aliquam</h2>
-					<p>Amet nisi nunc lorem accumsan</p>
-				</header><div class="container">
-					<div class="row">
-						<div class="6u">
-							<section class="special"><a href="#" class="image fit"><img src="images/pic01.jpg" alt="" width="680" height="308"></a>
-								<h3>Mollis adipiscing nisl</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
-								<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
-								</ul></section></div>
-						<div class="6u">
-							<section class="special"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" width="680" height="308"></a>
-								<h3>Neque ornare adipiscing</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
-								<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
-								</ul></section></div>
-					</div>
-				</div>
+					<p>Computation, math, physiology, and medicine</p>
 			</section><!-- Three --><section id="three" class="wrapper style1"><div class="container">
 					<div class="row">
 						<div class="8u">
-							<section><h2>Mollis ut adipiscing</h2>
+							<section><h2>Welcome</h2>
 								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" width="818" height="340"></a>
-								<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
+								<p> Welcome to the Foy Lab! We are part of the Department of Laboratory Medicine & Pathology, at the University of Washington.
+									Hospitals collect so much data through lab tests, and we want to use it better. We build computational tools to improve patient care, 
+									save clinicians time, and to learn physiology. Our approaches intersect math modelling and machine learning with large-scale, multi-modal clinical data.
+									We work on problems across medicine, but are particularly focused on hematology, cardiology, and critical care.</p>
 							</section></div>
 						<div class="4u">
-							<section><h3>Magna massa blandit</h3>
-								<p>Feugiat amet accumsan ante aliquet feugiat accumsan. Ante blandit accumsan eu amet tortor non lorem felis semper. Interdum adipiscing orci feugiat penatibus adipiscing col cubilia lorem ipsum dolor sit amet feugiat consequat.</p>
-								<ul class="actions"><li><a href="#" class="button alt">Learn More</a></li>
-								</ul></section><hr><section><h3>Ante sed commodo</h3>
-								<ul class="alt"><li><a href="#">Erat blandit risus vis adipiscing</a></li>
-									<li><a href="#">Tempus ultricies faucibus amet</a></li>
-									<li><a href="#">Arcu commodo non adipiscing quis</a></li>
-									<li><a href="#">Accumsan vis lacinia semper</a></li>
+								</ul></section><hr><section><h3>RECENT NEWS</h3>
+								<ul class="alt"><li><a href="#">Dec 2023: THe Foy Lab opens!</a></li>
+									<li><a href="#">INSERT</a></li>
+									<li><a href="#">INSERT</a></li>
+									<li><a href="#">INSERT</a></li>
 								</ul></section></div>
 					</div>
 				</div>
@@ -98,18 +57,21 @@
 							</div>
 						</div>
 						<div class="6u">
-							<h2>Aliquam Interdum</h2>
-							<p>Blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan justo aliquet.</p>
+							<h2>CONTACT</h2>
+							<p> Email: <a href="brodyfoy@uw.edu">brodyfoy@uw.edu</a></p>
+							<p>Department of Laboratory Medicine & Pathology</p>
+							<p>University of Washington</p>
+							<p>Room NW120</p>
+							<p>1959 NE Pacific Street</p>
+							<p>Seattle, WA, USA, 98195</p>
 							<ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Scholar</span></a></li>
+								<li><a href="#" class="icon fa-instagram"><span class="label">Department</span></a></li>
 							</ul></div>
 					</div>
 				</div>
 			</footer><div class="copyright">
-			Powered by: <a href="https://templated.co/">TEMPLATED.CO</a>
+			Design adapted from <a href="https://templated.co/">TEMPLATED</a>
 		</div>
 
 	</body></html>
