--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 						</div>
 						<div class="6u">
 							<h2>CONTACT</h2>
-							<p> Email: <a href="brodyfoy@uw.edu">brodyfoy@uw.edu</a></p>
-							<p>Department of Laboratory Medicine & Pathology</p>
-							<p>University of Washington</p>
-							<p>Room NW120</p>
-							<p>1959 NE Pacific Street</p>
-							<p>Seattle, WA, USA, 98195</p>
+							<p> Email: <a href="brodyfoy@uw.edu">brodyfoy@uw.edu</a>
+							Department of Laboratory Medicine & Pathology
+							<br>University of Washington
+							<br>Room NW120
+							<br>1959 NE Pacific Street
+							<br>Seattle, WA, USA, 98195</p>
 							<ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Scholar</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span class="label">Department</span></a></li>
