--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</section></div>
 						<div class="4u">
 								</ul></section><hr><section><h3>RECENT NEWS</h3>
-								<ul class="alt"><li><a href="#">Dec 2023: THe Foy Lab opens!</a></li>
+								<ul class="alt"><li><a href="#">Dec 2023: The Foy Lab opens!</a></li>
 									<li><a href="#">INSERT</a></li>
 									<li><a href="#">INSERT</a></li>
 									<li><a href="#">INSERT</a></li>
@@ -59,7 +59,7 @@
 						<div class="6u">
 							<h2>CONTACT</h2>
 							<p> Email: <a href="brodyfoy@uw.edu">brodyfoy@uw.edu</a>
-							Department of Laboratory Medicine & Pathology
+							<br>Department of Laboratory Medicine & Pathology
 							<br>University of Washington
 							<br>Room NW120
 							<br>1959 NE Pacific Street
