Fixed missing news item

--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
-							<li>Mar 2024: Amrit and Gaurang join the lab</li>
+							<li>Mar 2024: Amrit and Gaurang join the lab!</li>
 							<li>Dec 2023: Foy Lab opens!</li>
-							
-							<li>Item 2</li>
 						</ul>
 					</section>
 				</div>
