--- a/people.html
+++ b/people.html
@@ -51,8 +51,8 @@
 			<div class="row">
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/brodyfoy.jpg" alt="" width="60%"></a>
-					Brody H Foy, DPhil
-					<br> Acting Assistant Professor, Department of Laboratory Medicine & Pathology
+					<b>Brody H Foy, DPhil</b>
+					<br> <b> Acting Assistant Professor, Department of Laboratory Medicine & Pathology</b>
 				</div>
 				<div class="9u">
 					Brody is an applied mathematician who develops computational tools for medicine. He was a
@@ -76,8 +76,8 @@
 			<div class="row">
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/amrit_sharma.jpg" alt="" width="60%"></a>
-					Amrit Sharma
-					<br> Undergraduate, UW
+					<b>Amrit Sharma</b>
+					<br> <b>Undergraduate, UW</b>
 				</div>
 				<div class="9u">
 					Amrit is currently a first-year student at UW intending to study Computer Science. He hopes to go
@@ -93,8 +93,8 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/gaurang_pendharkar.jpeg" alt=""
 							width="60%"></a>
-					Gaurang Pendharkar
-					<br> Undergraduate, UW
+					<b>Gaurang Pendharkar</b>
+					<br> <b>Undergraduate, UW</b>
 				</div>
 				<div class="9u">
 					Gaurang is a first-year Computer Science and Mathematics undergraduate at UW with a strong interest in
@@ -119,8 +119,8 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/christos_nikolau.jpeg" alt=""
 							width="60%"></a>
-					Christos Nikolau
-					<br> PhD student, Imperial College London
+					<b>Christos Nikolau</b>
+					<br> <b>PhD student, Imperial College London</b>
 				</div>
 				<div class="9u">
 					Christos is a senior PhD student at the National Heart and Lung Institute, Imperial College London.
@@ -135,8 +135,8 @@
 			<div class="row">
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/nathan_laha.jpg" alt="" width="60%"></a>
-					Nathan Laha
-					<br> Program assistant, UW Medicine
+					<b>Nathan Laha</b>
+					<br> <b>Program assistant, UW Medicine</b>
 				</div>
 				<div class="9u">
 					Nathan is an undergraduate student studying Computer Science at Washington State University,
