fixed bottom buttons

--- a/publications.html
+++ b/publications.html
@@ -122,11 +122,11 @@
 						<div class="6u">
 							<h3>LINKS</h3>
 							<ul class="alt">
-								<li><a href="#">People</a></li>
-								<li><a href="#">Research</a></li>
-								<li><a href="#">Publications</a></li>
-								<li><a href="#">Tools</a></li>
-								<li><a href="#">Join</a></li>
+								<li><a href="people.html">People</a></li>
+								<li><a href="research.html">Research</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="tools.html">Tools</a></li>
+								<li><a href="join.html">Join</a></li>
 							</ul>
 						</div>
 					</div>
