--- a/people.html
+++ b/people.html
@@ -102,7 +102,7 @@
 					app, and teach computer science as a TA. His interests include playing chess, training judo,
 					and finding great places to eat.
 					<br><br>
-					<a href="https://www.linkedin.com/in/amrit23sharma">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/gaurang-pendharkar-b653a6209/">LinkedIn</a>
 				</div>
 			</div>
 
