Fixed LinkedIn link
Nathan Laha's linkedin link had a typo

--- a/people.html
+++ b/people.html
@@ -146,7 +146,7 @@
 					efficient. Outside work, he enjoys playing the piano and taking photos of the Pacific Northwest's
 					scenery.
 					<br><br><a href="https://nlaha.com/">Website</a>,
-					<a href="hhttps://www.linkedin.com/in/nlaha">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/nlaha">LinkedIn</a>
 				</div>
 			</div>
 		</div>
