--- a/people.html
+++ b/people.html
@@ -128,7 +128,7 @@
 					function testing. He is originally from Limassol, and enjoys experimenting with poetry and exploring
 					nature while horseback riding.
 					<br><br>
-					<a href="http://www.linkedin.com/in/christos-nikolaou-cn">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/christos-nikolaou-cn">LinkedIn</a>
 				</div>
 			</div>
 			<br><br>
