Add postdoc job desc

--- a/join.html
+++ b/join.html
@@ -53,6 +53,8 @@
 					care about clinical impact. We are currently hiring at multiple levels. Interested applicants should read the information below
 					and our <a href="pdfs/Prospective Applicants Guide.pdf">application guide</a>, and then <a href="mailto:brodyfoy@uw.edu">email Brody</a>.
 					<br><br>
+					We are actively searching for a postdoctoral fellow. Read the job posting <a href="pdfs/Position_Description.pdf">here</a>. Please get in touch, and share with your friends!
+					<br><br>
 					If you don’t match the categories below but still think you are a good fit for the lab, please send an email
 					with your CV and an explanation.
 					</p>
