--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,9 @@
 				<p>Publications are also listed on <a href="https://scholar.google.com/citations?user=e8W2uR0AAAAJ&hl=en">Google Scholar</a> and 
 					<a href="https://pubmed.ncbi.nlm.nih.gov/?term=brody%20foy">PubMed</a>. If you cannot access any of the papers below, please <a href="mailto:brodyfoy@uw.edu">email Brody</a>. </p>
 				<h2>ARTICLES</h2>
-				<p> BH Foy, R Petherbridge, M Roth, C Mow, HR Patel, CH Patel, SN Ho, E Lam, KJ Karczewski, V Tozzo, JM Higgins. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10557837/">Hematologic setpoints are a stable and patient-specific deep phenotype</a>. medRxiv. 
+				<p>
+				R Brewster, S Mathias, S Sarvode, D Unnikrishnan, D Rama, BH Foy<sup>&#10013</sup>, C Britto<sup>&#10013</sup>. 2024. A pragmatic calibration of the ROX index to predict outcome of nasal high-flow therapy in India. Journal of Critical Care. (In Press)
+				<p> BH Foy, R Petherbridge, M Roth, C Mow, HR Patel, CH Patel, SN Ho, E Lam, KJ Karczewski, V Tozzo, JM Higgins. 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10557837/">Hematologic setpoints are a stable and patient-specific deep phenotype</a>. medRxiv. 
 				<br><br> KA Kooshesh, BH Foy, DB Sykes, K Gustafsson, DT Scadden. 2023. <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2302892">Health consequences of thymus removal in adults</a>. New England Journal of Medicine. 389(5): 406-417. PMID: 37530823
 				<br><br> DR Wilcox, ER Rudmann, E Ye, A Noori, C Magdamo, A Jain, H Alabsi, BH Foy, VA Triant, GK Robbins, MB Westover, S Das, SS Mukerji. 2023. <a href="https://journals.lww.com/aidsonline/abstract/2023/08010/cognitive_concerns_are_a_risk_factor_for_mortality.9.aspx">Cognitive concerns are a risk factor for mortality in people with HIV and coronavirus disease 2019</a>. AIDS. 37(10):1565. PMID: 37195278
 				<br><br> BH Foy*, J Stefely*, PK Bendapudi, RP Hasserjian, H Al-Samkari, A Louissaint Jr, M Fitzpatrick, B Hutchison, C Mow, J Collins, H Patel, C Patel, N Patel, S Ho, RM Kaufman, W Dzik, JM Higgins, RS Makar. 2023. <a href="https://ashpublications.org/bloodadvances/article/7/16/4621/495680/Computer-vision-quantitation-of-erythrocyte-shape">Computer vision quantitation of erythrocyte shape abnormalities provides diagnostic, prognostic, and mechanistic insight</a>. Blood Advances. 2022008967. PMID: 37146262
@@ -80,6 +82,7 @@
 				<br><br> BH Foy, R Bordas, D Kay. 2017. <a href="https://www.sciencedirect.com/science/article/abs/pii/S1569904816301896">Modelling responses of the inert-gas washout and MRI to bronchoconstriction</a>. Respiratory Physiology and Neurobiology. 235: 8-17. PMID: 27677404
 				<br><br> BH Foy, D Kay. 2017. <a href="https://www.sciencedirect.com/science/article/abs/pii/S1569904816302749">A computational comparison of the multiple-breath washout and forced oscillation technique as markers of bronchoconstriction</a>. Respiratory Physiology and Neurobiology. 240: 61-69. PMID: 28300726
 				<br><br> * First authors contributed equally
+				<br><br> <sup>&#10013</sup> Senior authors contributed equally
 				<br><br>
 				</p>
 				<h2>EDITORIAL</h2>
