Fixed Christos name typo

--- a/people.html
+++ b/people.html
@@ -119,7 +119,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/christos_nikolau.jpeg" alt=""
 							width="60%"></a>
-					<b>Christos Nikolau</b>
+					<b>Christos Nikolaou</b>
 					<br> <b>PhD student, Imperial College London</b>
 				</div>
 				<div class="9u">
