--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>Apr 2024: New paper in Journal of Critical Care</li>
 							<li>Mar 2024: Amrit and Gaurang join the lab!</li>
 							<li>Dec 2023: Foy Lab opens!</li>
 						</ul>
