--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
-							<li>Apr 2024: New paper in Journal of Critical Care</li>
+							<li>May 2024: New paper in the <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2402567">New England Journal of Medicine</a></li>
+							<li>Apr 2024: New paper in <a href="https://www.sciencedirect.com/science/article/abs/pii/S0883944124002995">Journal of Critical Care</a></li>
 							<li>Mar 2024: Amrit and Gaurang join the lab!</li>
-							<li>Dec 2023: Foy Lab opens!</li>
 						</ul>
 					</section>
 				</div>
