Add Cindy to people page

--- a/people.html
+++ b/people.html
@@ -75,6 +75,21 @@
 			<br><br>
 			<div class="row">
 				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/cindyzhang.png" alt="" width="60%"></a>
+					<b>Cindy Zhang</b>
+					<br> <b>Research Engineer, UW</b>
+				</div>
+				<div class="9u">
+					Cindy is a recent Johns Hopkins graduate in biomedical engineering and computer science with interests in computational biology 
+					and advancing health through AI/ML. She has also worked as a programmer analyst, barista, and math tutor. Originally from Minnesota, 
+					she has a great appreciation for the summer. She enjoys trail runs, recreational swimming, and indoor climbing.
+					<br><br>
+					<a href="https://www.linkedin.com/in/cindy-zhang-">LinkedIn</a>
+				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/amrit_sharma.jpg" alt="" width="60%"></a>
 					<b>Amrit Sharma</b>
 					<br> <b>Undergraduate, UW</b>
