Remove acting title

--- a/people.html
+++ b/people.html
@@ -52,10 +52,10 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/brodyfoy.jpg" alt="" width="60%"></a>
 					<b>Brody H Foy, DPhil</b>
-					<br> <b> Acting Assistant Professor, Department of Laboratory Medicine & Pathology</b>
+					<br> <b> Assistant Professor, Department of Laboratory Medicine & Pathology</b>
 				</div>
 				<div class="9u">
-					Brody is an applied mathematician who develops computational tools for medicine. He was a
+					Brody is an mathematician who develops computational tools for medicine. He was a
 					graduate student in computer science at the University of Oxford, and a postdoctoral fellow in
 					systems biology
 					at Harvard Medical School, and Massachusetts General Hospital. Brody is a Rhodes Scholar, and has
