Add Amber's profile

--- a/people.html
+++ b/people.html
@@ -90,6 +90,23 @@
 			<br><br>
 			<div class="row">
 				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/amber_chen.JPG" alt="" width="60%"></a>
+					<b>Chen (Amber) Ya-Lin</b>
+					<br> <b>Graduate Student, UW</b>
+				</div>
+				<div class="9u">
+					Amber is a PhD student at the Department of Biomedical Informatics and Medical Education at UW. 
+					With a background in pharmacy, she brings interdisciplinary expertise in biostatistics, AI/ML, and 
+					their clinical applications. Outside of her studies, she enjoys discovering great food and spending 
+					quality time with family and friends.
+					<br><br>
+					<a href="https://www.linkedin.com/in/yalinchen-amber/">LinkedIn</a>,
+					<a href="https://medium.com/@bionewsdigest">Medium</a>
+				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/amrit_sharma.jpg" alt="" width="60%"></a>
 					<b>Amrit Sharma</b>
 					<br> <b>Undergraduate, UW</b>
