Updated research profiles

--- a/join.html
+++ b/join.html
@@ -50,10 +50,10 @@
 			<section>
 				<p>We work on cutting-edge problems at the intersection of computation and medicine. We are interested
 					in scientists with diverse backgrounds and training, who share a love for this intersection and
-					care about clinical impact. We are currently hiring at multiple levels. Interested applicants should read the information below
+					care about clinical impact. Interested applicants should read the information below
 					and our <a href="pdfs/Prospective Applicants Guide.pdf">application guide</a>, and then <a href="mailto:brodyfoy@uw.edu">email Brody</a>.
 					<br><br>
-					We are actively searching for a postdoctoral fellow. Read the job posting <a href="pdfs/Position_Description.pdf">here</a>. Please get in touch, and share with your friends!
+					We are actively searching for a postdoctoral fellow, to develop new projects within the lab. If interested, please get in touch!
 					<br><br>
 					If you don’t match the categories below but still think you are a good fit for the lab, please send an email
 					with your CV and an explanation.
@@ -65,10 +65,11 @@
 	<section, class="wrapper style1">
 		<div>
 			<h2> UNDERGRADUATES</h2>
-			<p>We can offer research-for-credit projects for UW undergraduates only. Interested students should
+			<p>We can offer research-for-credit projects for UW undergraduates. Interested students should
 				have experience with programming in a data-analysis language (R, Python, MATLAB) and have taken at least
 				one university-level statistics class. Applicants should follow instructions in the
-				lab manual. Note that we do not take on high school students in any capacity.
+				lab manual. Note that we do not take on high school students in any capacity, and cannot offer roles to non
+				UW students.
 			</p>
 			<hr class="divider">		
 		</div>
