--- a/research.html
+++ b/research.html
@@ -51,10 +51,10 @@
 				<p>Our research intersects math modelling and machine learning with medicine and physiology to achieve 3
 					goals:
 					1) improve patient outcomes; 2) improve clinical operations, and 3) uncover novel physiology. Our
-					projects typically focus on the hematologic, pulmonary, and cardiac systems – but we are interested
-					in any situations where computational tools can realistically help patients. We believe in
-					collaborative and open-science, and building tools that can actually get used in the clinic.
-				</p>
+					projects typically focus on clinical blood tests, and blood cell dynamics - but we are a interested
+					in any situations where computational can realistically help patients. Our goal is not just to 
+					contribute to scientific knowledge, but to actually build and deploy tools into the clinic. We believe 
+					in collaborative, open, and reproducible science.
 			</section>
 		</div>
 	</section>
@@ -68,11 +68,9 @@
 			</div>
 			<div class="9u">
 				Most blood tests are benchmarked against ‘reference intervals’ derived from healthy populations. These
-				population-level
-				definitions of normality ignore genetic heritability and clinical context. We develop computational
-				approaches to
-				create adaptive benchmarks which are both patient- and context-specific, helping to realize a
-				longstanding goal of personalized medicine.
+				population-level definitions of normality ignore genetic heritability and clinical context. We develop 
+				computational approaches to create adaptive benchmarks which are both patient- and context-specific, 
+				helping to realize a longstanding goal of personalized medicine.
 			</div>
 		</div>
 
@@ -85,15 +83,14 @@
 			</div>
 			<div class="9u">
 				Pathologists spend so much time on work that isn’t patient-facing. We build tools that can help reduce
-				clinical workload,
-				and lead to more efficient and reproducible workflows. This includes developing computer vision tools
-				for cell analyses,
-				predicting demand for blood product usage, and using large-language models to augment sign-outs.
+				clinical workload, and lead to more efficient and reproducible workflows. This includes developing 
+				computer vision tools for cell analyses, predicting demand for blood product usage, and using large-language
+				 models to augment clinical sign-outs.
 			</div>
 		</div>
 
 		<br><br>
-		<h2> Modelling pulmonary and hematologic biophysics </h2>
+		<h2> Modelling biophysics of blood </h2>
 		<div class="row double">
 			<div class="3u">
 				<a href="https://www.sciencedirect.com/science/article/pii/S0021999119301974?casa_token=vidmlY94FwwAAAAA:h4ub2DYhwg-GfHSQ2hK4UgaQ38nqO_d8srh1352DIFd9l5rIiYb5_wJnjtATwr4aGGkrWkSxhA"
@@ -101,12 +98,10 @@
 			</div>
 			<div class="9u">
 				Blood is a living fluid, whose dynamic properties depend on properties of the cells within it. We use
-				mathematical modelling
-				to simulate the behavior of blood both as a fluid, and as a series of interacting cell populations.
-				Models are used to improve
-				mechanistic understanding of oxygenation, to capture and predict recovery responses to acute bleeding
-				events, and to ultimately
-				inform treatment decisions in acute care.
+				mathematical modelling to simulate the behavior of blood both as a fluid, and as a series of interacting 
+				cell populations. Models are used to improve our understanding of various functional processes, such as 
+				oxygen delivery, coagulation, and immunity. We use these models in highly applied settings, to capture and
+				predict response to acute inflammation, with an ultimate goal of informating acute care decision making.
 			</div>
 		</div>
 
@@ -119,12 +114,10 @@
 			</div>
 			<div class="9u">
 				Trauma, ischemia, and infection all set off a cascade of inflammatory signaling processes as the body
-				recovers. We use computational
-				tools to better understand how blood cells respond to and influence the inflammatory environment, and
-				how this defines recovery.
+				recovers. We use computational tools to better understand how blood cells respond to and influence 
+				the inflammatory environment, and how this defines recovery.
 				We collaborative extensively with clinicians and experimentalists to probe the immune system using
-				mathematical models,
-				machine learning, clinical specimen analysis, and mouse models.
+				mathematical models, machine learning, clinical specimen analysis, and mouse models.
 			</div>
 		</div>
 		<br>
