Lab profile update

--- a/people.html
+++ b/people.html
@@ -77,7 +77,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/cindyzhang.png" alt="" width="60%"></a>
 					<b>Cindy Zhang</b>
-					<br> <b>Research Engineer, UW</b>
+					<br> <b>Research Engineer, DLMP</b>
 				</div>
 				<div class="9u">
 					Cindy is a recent Johns Hopkins graduate in biomedical engineering and computer science with interests in computational biology 
@@ -92,7 +92,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/amber_chen.JPG" alt="" width="60%"></a>
 					<b>Chen (Amber) Ya-Lin</b>
-					<br> <b>Graduate Student, UW</b>
+					<br> <b>Graduate Student, BIME</b>
 				</div>
 				<div class="9u">
 					Amber is a PhD student at the Department of Biomedical Informatics and Medical Education at UW. 
@@ -109,7 +109,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/amrit_sharma.jpg" alt="" width="60%"></a>
 					<b>Amrit Sharma</b>
-					<br> <b>Undergraduate, UW</b>
+					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
 					Amrit is currently a first-year student at UW intending to study Computer Science. He hopes to go
@@ -126,7 +126,7 @@
 					<a class="image"><img src="images/lab-member-headshots/gaurang_pendharkar.jpeg" alt=""
 							width="60%"></a>
 					<b>Gaurang Pendharkar</b>
-					<br> <b>Undergraduate, UW</b>
+					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
 					Gaurang is a first-year Computer Science and Mathematics undergraduate at UW with a strong interest in
@@ -137,8 +137,21 @@
 					<a href="https://www.linkedin.com/in/gaurang-pendharkar-b653a6209/">LinkedIn</a>
 				</div>
 			</div>
-
-
+			<br><br>
+			<div class="row">
+				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/namrata_harish.png" alt=""
+							width="60%"></a>
+					<b>Namrata Harish</b>
+					<br> <b>Undergraduate</b>
+				</div>
+				<div class="9u">
+					Namrata is a fourth year student at UW studying bioengineering with a concentration in data science. 
+					She is interested in the applications of AI/ML to improve the quality and accessibility of healthcare. 
+					Outside of academics, she enjoys crafting, playing the violin, and recently started learning tennis.
+					<br><br>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -152,7 +165,7 @@
 					<a class="image"><img src="images/lab-member-headshots/christos_nikolau.jpeg" alt=""
 							width="60%"></a>
 					<b>Christos Nikolaou</b>
-					<br> <b>PhD student, Imperial College London</b>
+					<br> <b>Graduate student, Imperial College London</b>
 				</div>
 				<div class="9u">
 					Christos is a senior PhD student at the National Heart and Lung Institute, Imperial College London.
@@ -168,7 +181,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/nathan_laha.jpg" alt="" width="60%"></a>
 					<b>Nathan Laha</b>
-					<br> <b>Program assistant, UW Medicine</b>
+					<br> <b>Program assistant, DLMP</b>
 				</div>
 				<div class="9u">
 					Nathan is an undergraduate student studying Computer Science at Washington State University,
