Add LI link to Namrata's profile

--- a/people.html
+++ b/people.html
@@ -150,6 +150,7 @@
 					She is interested in the applications of AI/ML to improve the quality and accessibility of healthcare. 
 					Outside of academics, she enjoys crafting, playing the violin, and recently started learning tennis.
 					<br><br>
+					<a href="http://www.linkedin.com/in/namrata-harish/">LinkedIn</a>
 				</div>
 			</div>
 		</div>
