Update typo in people tab

--- a/people.html
+++ b/people.html
@@ -55,17 +55,14 @@
 					<br> <b> Assistant Professor, Department of Laboratory Medicine & Pathology</b>
 				</div>
 				<div class="9u">
-					Brody is an mathematician who develops computational tools for medicine. He was a
+					Brody is a mathematician who develops computational tools for medicine. He was a
 					graduate student in computer science at the University of Oxford, and a postdoctoral fellow in
-					systems biology
-					at Harvard Medical School, and Massachusetts General Hospital. Brody is a Rhodes Scholar, and has
-					won awards
-					for excellence in teaching and mentoring, research, and for outstanding volunteer work. He has also
-					worked in
-					suicide prevention, policy outreach, and ran a non-profit AI consultancy. He is originally from the
-					Sunshine Coast,
-					Australia, and misses good beaches and the rainforest. Outside of work he likes to play guitar, hit
-					tennis balls, and hike.
+					systems biology at Harvard Medical School, and Massachusetts General Hospital. He has expertise in  
+					computational mathematics, machine learning, hematology, and the translational of computational tools
+					into the clinic. Brody is a Rhodes Scholar, and has won awards for excellence in teaching and mentoring, 
+					research, and for outstanding volunteer work. He has also worked in suicide prevention, policy outreach, 
+					and ran a non-profit AI consultancy. He is originally from the Sunshine Coast, Australia, and misses 
+					good beaches and the rainforest. Outside of work he likes to play guitar, hit tennis balls, and hike.
 					<br><br><a href="pdfs/BrodyFoy_CV.pdf">CV</a>,
 					<a href="https://scholar.google.com/citations?user=e8W2uR0AAAAJ&hl=en">Scholar</a>,
 					<a href="https://dlmp.uw.edu/faculty/foy">Faculty</a>,
