Add Derek's profile

--- a/people.html
+++ b/people.html
@@ -151,6 +151,21 @@
 					<a href="http://www.linkedin.com/in/namrata-harish/">LinkedIn</a>
 				</div>
 			</div>
+			<br><br>
+			<div class="row">
+				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/derek_zhu.png" alt=""
+							width="60%"></a>
+					<b>Derek Zhu</b>h</b>
+					<br> <b>Undergraduate</b>
+				</div>
+				<div class="9u">
+					Derek is a fourth-year Computer Science and ACMS undergraduate at UW with a huge interest in deep learning 
+					applications in medicine. He hopes to apply his skills in the field of AI as a researcher or pursue the field 
+					of quantitative finance. His interests include playing guitar, finding nearby cafes to eat at, and taking naps.
+				</div>
+			</div>
+
 		</div>
 	</section>
 
