--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>Jan 2025: Derek Zhu joins the lab!</li>
 							<li>Dec 2024: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
 							<li>Sep 2024: Amber Chen and Namrata Harish join the lab!</li>
 							<li>Aug 2024: Foy lab wins ADLM Distinguished Abstract Award</li>
-							<li>June 2024: Cindy Zhang joins the lab!</li>
 							<li>May 2024: New paper in the <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2402567">New England Journal of Medicine</a></li>
 						</ul>
 					</section>
