add Derek's linkedin

--- a/people.html
+++ b/people.html
@@ -163,6 +163,8 @@
 					Derek is a fourth-year Computer Science and ACMS undergraduate at UW with a huge interest in deep learning 
 					applications in medicine. He hopes to apply his skills in the field of AI as a researcher or pursue the field 
 					of quantitative finance. His interests include playing guitar, finding nearby cafes to eat at, and taking naps.
+					<br><br>
+					<a href="https://www.linkedin.com/in/derek-zhu-873477215/">LinkedIn</a>
 				</div>
 			</div>
 
