--- a/people.html
+++ b/people.html
@@ -156,7 +156,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/derek_zhu.png" alt=""
 							width="60%"></a>
-					<b>Derek Zhu</b>h</b>
+					<b>Derek Zhu</b>
 					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
