--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
-							<li>Jan 2025: New paper in <a href="<https://rdcu.be/d7OHL">Nature Communications</a></li>
+							<li>Jan 2025: New paper in <a href="https://rdcu.be/d7OHL">Nature Communications</a></li>
 							<li>Jan 2025: Derek Zhu joins the lab!</li>
 							<li>Dec 2024: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
 							<li>Sep 2024: Amber Chen and Namrata Harish join the lab!</li>
