Add bioe affiliation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section>
 						<h2>We develop computational methods for lab medicine</h2>
 						<div class="image fit"><img src="images/blood-adv.jpeg" alt="" width="500" height="340"></div>
-						<p>We are part of the Department of Laboratory Medicine & Pathology. Hospitals collect so much data through laboratory testing, and we want to use it better. 
+						<p>We are part of the Department of Laboratory Medicine & Pathology, and Department of Bioengineering. Hospitals collect so much data through laboratory testing, and we want to use it better. 
 							We build computational tools to improve patient care, save clinician time, and uncover physiologic insights. Our approaches intersect 
 							math modelling and machine learning with large-scale, multi-modal clinical data. 
 							We work on problems across medicine, but are particularly focused on hematology, cardiology, and critical care. </p>
