--- a/people.html
+++ b/people.html
@@ -54,6 +54,7 @@
 					<a class="image"><img src="images/lab-member-headshots/brodyfoy.jpg" alt="" width="60%"></a>
 					<b>Brody H Foy, DPhil</b>
 					<br> <b> Assistant Professor, Department of Laboratory Medicine & Pathology</b>
+					<br> <b> Adjunct Assistant Professor, Department of Bioengineering</b>
 				</div>
 				<div class="9u">
 					Brody is a mathematician who develops computational tools for medicine. He was a
