--- a/people.html
+++ b/people.html
@@ -193,26 +193,21 @@
 					<a href="https://www.linkedin.com/in/christos-nikolaou-cn">LinkedIn</a>
 				</div>
 			</div>
-			<br><br>
-			<div class="row">
-				<div class="3u">
-					<a class="image"><img src="images/lab-member-headshots/nathan_laha.jpg" alt="" width="60%"></a>
-					<b>Nathan Laha</b>
-					<br> <b>Program assistant, DLMP</b>
-				</div>
-				<div class="9u">
-					Nathan is an undergraduate student studying Computer Science at Washington State University,
-					currently
-					doing research and software development for the University of Washington Medical Center. His work
-					involves building custom software tools and using data science techniques to make healthcare more
-					efficient. Outside work, he enjoys playing the piano and taking photos of the Pacific Northwest's
-					scenery.
-					<br><br><a href="https://nlaha.com/">Website</a>,
-					<a href="https://www.linkedin.com/in/nlaha">LinkedIn</a>
-				</div>
-			</div>
 		</div>
 	</section><!-- Footer -->
+	<section id="three" class="wrapper style1">
+		<header class="major">
+			<h2>FORMER</h2>
+		</header>
+		<div class="container">
+			<div class="row">
+				<br> <a href="https://www.linkedin.com/in/nlaha">Nathan Laha</a>. Program assistant. 
+			</div>
+		</div>
+	</section>
+
+
+
 	<footer id="footer">
 		<div class="container">
 			<div class="row double">
