--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="8u">
 					<section>
 						<h2>We develop computational methods for lab medicine</h2>
-						<div class="image fit"><img src="images/blood-adv.jpeg" alt="" width="500" height="340"></div>
+						<div class="image fit"><img src="images/lab-group-photo.jpeg" alt="" width="500" height="340"></div>
 						<p>We are part of the Department of Laboratory Medicine & Pathology, and Department of Bioengineering. Hospitals collect so much data through laboratory testing, and we want to use it better. 
 							We build computational tools to improve patient care, save clinician time, and uncover physiologic insights. Our approaches intersect 
 							math modelling and machine learning with large-scale, multi-modal clinical data. 
@@ -69,11 +69,11 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>May 2025: Multiple abstracts presented at the 2025 API conference.</li>
+							<li>May 2025: Amber Chen passed her PhD general exam!</li>
 							<li>Jan 2025: New paper in <a href="https://rdcu.be/d7OHL">Nature Communications</a></li>
 							<li>Jan 2025: Derek Zhu joins the lab!</li>
 							<li>Dec 2024: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
-							<li>Sep 2024: Amber Chen and Namrata Harish join the lab!</li>
-							<li>Aug 2024: Foy lab wins ADLM Distinguished Abstract Award</li>
 						</ul>
 					</section>
 				</div>
