--- a/media.html
+++ b/media.html
@@ -52,6 +52,10 @@
 			<section>
 				<p> Occasionally our work gets press! 
 					<br><br>Read some of the things we and others have written here:
+				<h3>General</h3>
+				<li>Brody was interviewed for the <a href="https://podcasts.apple.com/us/podcast/improving-test-interpretation-through-personal-reference/id1770813734?i=1000691208097">PLUGS podcast</a>, talking about personalized reference intervals, AI in medicine, and statistical literacy.</li>
+				<br><br> 
+
 				<h3>Blood count setpoints</h3>
 				Media related to our <a href = "https://www.nature.com/articles/s41586-024-08264-5">Nature</a> paper on blood count setpoints:
 				<li>Brody wrote an explainer for <a href="https://theconversation.com/blood-tests-are-currently-one-size-fits-all-machine-learning-can-pinpoint-whats-truly-normal-for-each-patient-245730">The Conversation</a></li>
