--- a/people.html
+++ b/people.html
@@ -168,7 +168,21 @@
 					<a href="https://www.linkedin.com/in/derek-zhu-873477215/">LinkedIn</a>
 				</div>
 			</div>
-
+<br><br>
+			<div class="row">
+				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/attila_jamilov.jpg" alt=""
+							width="60%"></a>
+					<b>Derek Zhu</b>
+					<br> <b>Undergraduate</b>
+				</div>
+				<div class="9u">
+					Attila is a third-year ACMS: Discrete Math and Algorithms student at UW with an interest in Backend, Low-Latency, and 
+					High-Performance Development. He wishes to contribute to open-source software and make highly optimized software. He 
+					has interests in bouldering, cycling, and reading web novels.
+					<br><br>
+				</div>
+			</div>
 		</div>
 	</section>
 
