--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>July 2025: Attila Jamilov joins the lab!</li>
 							<li>May 2025: Multiple abstracts presented at the 2025 API conference.</li>
 							<li>May 2025: Amber Chen passed her PhD general exam!</li>
 							<li>Jan 2025: New paper in <a href="https://rdcu.be/d7OHL">Nature Communications</a></li>
