--- a/people.html
+++ b/people.html
@@ -173,7 +173,7 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/attila_jamilov.jpg" alt=""
 							width="60%"></a>
-					<b>Derek Zhu</b>
+					<b>Attila Jamilov</b>
 					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
